--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,20 +1,38 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Quicksand:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Quicksand:wght@500&display=swap');
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");
 
-
-* {
+body {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
   font-family: "Quicksand", sans-serif;
   font-optical-sizing: auto;
+  font-weight: 500;
   font-style: normal;
-  color: black;
+  color: "#3b3447"
 }
 
+.font-topic{
+  font-family: "Josefin Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.font-textarea{
+  font-family: "Open Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+}
 
 @layer base {
   :root {
