--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Quicksand:wght@500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Quicksand:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Proza+Libre:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
 
 
 @tailwind base;
@@ -13,25 +12,30 @@ body {
   padding: 0;
   margin: 0;
   font-family: "Quicksand", sans-serif;
+  font-weight: 600;
   font-optical-sizing: auto;
-  font-weight: 500;
-  font-style: normal;
-  color: "#3b3447"
+  color: "#413A4A"
 }
 
 .font-topic{
-  font-family: "Josefin Sans", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 700;
-  font-style: normal;
+  font-family: "Proza Libre", sans-serif;
 }
 
 .font-textarea{
   font-family: "Open Sans", sans-serif;
   font-optical-sizing: auto;
-  font-style: normal;
   font-variation-settings:
     "wdth" 100;
+}
+
+.inner {
+  box-shadow: 
+  inset 0 6px 5px 0 rgb(0 0 0 / 0.1), /* Top shadow */
+  inset 0 -6px 5px 0 rgb(0 0 0 / 0.1); /* Bottom shadow */
+}
+
+.tag {
+  clip-path: polygon(50% 0, 100% 50%, 50% 100%, 0 50%);
 }
 
 @layer base {
