--- a/styles/globals.css
+++ b/styles/globals.css
@@ -53,7 +53,7 @@ body {
   font-weight: 800;
   color: rgb(255, 255, 255);
   text-shadow: rgba(0, 0, 0, 0.16) 0.03125rem 0.0125rem;
-  background: linear-gradient(rgb(255, 165, 9) 0%, rgb(228, 157, 3) 100%) 0% 0% no-repeat border-box border-box;
+  background: linear-gradient(rgb(255, 165, 9) 0%, rgb(228, 156, 0) 100%) 0% 0% no-repeat border-box border-box;
   box-shadow: rgb(187, 115, 0) 0px 0.125rem 0px 0px, rgba(180, 151, 136, 0.6) 0px 0.25rem 0.125rem 0px;
   border: 1px solid rgb(228, 167, 34);
   transition: 0.1s cubic-bezier(0, 1.5, 1, 2);
@@ -62,6 +62,14 @@ body {
 .orange-button:active {
   box-shadow: rgb(187, 115, 0) 0px 0.1rem 0px 0px, rgba(180, 151, 136, 0.6)0px 0 0.125rem 0px;
   transform: scale(99%);
+}
+
+.board-paper {
+  box-shadow: rgba(174, 115, 19, 0.836) 0px 2px 5px 1px;
+}
+
+.board-bg {
+  background: linear-gradient(190deg, #debf59, #f5df9d ,#debf59);
 }
 
 @layer base {
