--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Proza+Libre:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Proza+Libre:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@700;900&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 
 body {
   box-sizing: border-box;
@@ -14,42 +14,51 @@ body {
   font-family: "Quicksand", sans-serif;
   font-weight: 600;
   font-optical-sizing: auto;
-  color: "#413A4A"
+  color: "#413A4A";
 }
 
-.font-topic{
+.font-topic {
   font-family: "Proza Libre", sans-serif;
 }
 
-.font-textarea{
+.font-textarea {
   font-family: "Open Sans", sans-serif;
   font-optical-sizing: auto;
-  font-variation-settings:
-    "wdth" 100;
+  font-variation-settings: "wdth" 100;
 }
 
-.bg {
-  background-image: url('/bg.png');
+.font-mplus {
+  font-family: "M PLUS 1p", sans-serif;
+  font-weight: 800;
+  font-style: normal;
+}
+
+.lato {
+  font-family: "Lato", sans-serif;
+  font-weight: 900;
+  font-style: normal;
 }
 
 .inner {
-  box-shadow: 
-  inset 0 6px 5px 0 rgb(0 0 0 / 0.1), /* Top shadow */
-  inset 0 -6px 5px 0 rgb(0 0 0 / 0.1); /* Bottom shadow */
+  box-shadow: inset 0 6px 5px 0 rgb(0 0 0 / 0.1),
+    /* Top shadow */ inset 0 -6px 5px 0 rgb(0 0 0 / 0.1); /* Bottom shadow */
 }
 
 .green-button {
   font-weight: 800;
   color: rgb(255, 255, 255);
   text-shadow: rgba(0, 0, 0, 0.16) 0.03125rem 0.0125rem;
-  background: linear-gradient(rgb(99, 198, 4) 0%, rgb(74, 194, 0) 100%) 0% 0% no-repeat border-box border-box;
-  box-shadow: rgb(53, 144, 0) 0px 0.125rem 0px 0px, rgba(179, 174, 119, 0.6) 0px 0.25rem 0.125rem 0px;
+  background: linear-gradient(rgb(99, 198, 4) 0%, rgb(74, 194, 0) 100%) 0% 0%
+    no-repeat border-box border-box;
+  box-shadow: rgb(53, 144, 0) 0px 0.125rem 0px 0px,
+    rgba(179, 174, 119, 0.6) 0px 0.25rem 0.125rem 0px;
   border: 1px solid rgb(123, 228, 34);
   transition: 0.1s cubic-bezier(0, 1.5, 1, 1);
 }
 
 .green-button:active {
-  box-shadow: rgb(53, 144, 0) 0px 0.1rem 0px 0px, rgba(179, 174, 119, 0.6) 0px 0 0.125rem 0px;
+  box-shadow: rgb(53, 144, 0) 0px 0.1rem 0px 0px,
+    rgba(179, 174, 119, 0.6) 0px 0 0.125rem 0px;
   transform: scale(99%);
 }
 
@@ -57,14 +66,17 @@ body {
   font-weight: 800;
   color: rgb(255, 255, 255);
   text-shadow: rgba(0, 0, 0, 0.16) 0.03125rem 0.0125rem;
-  background: linear-gradient(rgb(255, 165, 9) 0%, rgb(228, 156, 0) 100%) 0% 0% no-repeat border-box border-box;
-  box-shadow: rgb(187, 115, 0) 0px 0.125rem 0px 0px, rgba(180, 151, 136, 0.6) 0px 0.25rem 0.125rem 0px;
+  background: linear-gradient(rgb(255, 165, 9) 0%, rgb(228, 156, 0) 100%) 0% 0%
+    no-repeat border-box border-box;
+  box-shadow: rgb(187, 115, 0) 0px 0.125rem 0px 0px,
+    rgba(180, 151, 136, 0.6) 0px 0.25rem 0.125rem 0px;
   border: 1px solid rgb(237, 182, 64);
   transition: 0.1s cubic-bezier(0, 1.5, 1, 1);
 }
 
 .orange-button:active {
-  box-shadow: rgb(187, 115, 0) 0px 0.1rem 0px 0px, rgba(180, 151, 136, 0.6)0px 0 0.125rem 0px;
+  box-shadow: rgb(187, 115, 0) 0px 0.1rem 0px 0px,
+    rgba(180, 151, 136, 0.6) 0px 0 0.125rem 0px;
   transform: scale(99%);
 }
 
@@ -73,14 +85,15 @@ body {
 }
 
 .board-bg {
-  background: linear-gradient(190deg, #debf59, #f5df9d ,#debf59);
+  background: linear-gradient(190deg, #debf59, #f5df9d, #debf59);
 }
 
 .filter-checked {
   font-weight: 800;
   color: rgb(255, 255, 255);
   background: linear-gradient(rgb(188, 146, 246) 0%, rgb(168, 124, 213) 100%);
-  box-shadow: rgb(119, 68, 214) 0px 0.1rem 0px 0px, rgba(125, 106, 129, 0.6) 0px 0px 0.125rem 0px;
+  box-shadow: rgb(119, 68, 214) 0px 0.1rem 0px 0px,
+    rgba(125, 106, 129, 0.6) 0px 0px 0.125rem 0px;
   border: 1px solid rgb(189, 150, 231);
   transition: 0.1s cubic-bezier(0, 1.5, 1, 1);
   transform: scale(99%);
@@ -90,39 +103,8 @@ body {
   font-weight: 800;
   color: rgb(255, 255, 255);
   background: linear-gradient(rgb(190, 190, 190) 0%, rgb(164, 164, 164) 100%);
-  box-shadow: rgb(147, 147, 147) 0px 0.2rem 0px 0px, rgba(52, 52, 52, 0.6) 0px 1px 0.125rem 0px;
+  box-shadow: rgb(147, 147, 147) 0px 0.2rem 0px 0px,
+    rgba(52, 52, 52, 0.6) 0px 1px 0.125rem 0px;
   border: 1px solid rgb(190, 190, 190);
   transition: 0.1s cubic-bezier(0, 1.5, 1, 1);
-}
-
-
-
-@layer base {
-  :root {
-    --background: 68, 70%, 37%
-    --foreground: 20 14.3% 4.1%;
-    --card: 0 0% 100%;
-    --card-foreground: 20 14.3% 4.1%;
-    --popover: 0 0% 100%;
-    --popover-foreground: 20 14.3% 4.1%;
-    --primary: 47.9 95.8% 53.1%;
-    --primary-foreground: 26 83.3% 14.1%;
-    --secondary: 60 4.8% 95.9%;
-    --secondary-foreground: 24 9.8% 10%;
-    --muted: 60 4.8% 95.9%;
-    --muted-foreground: 25 5.3% 44.7%;
-    --accent: 60 4.8% 95.9%;
-    --accent-foreground: 24 9.8% 10%;
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 60 9.1% 97.8%;
-    --border: 20 5.9% 90%;
-    --input: 20 5.9% 90%;
-    --ring: 20 14.3% 4.1%;
-    --radius: 0.5rem;
-    --chart-1: 12 76% 61%;
-    --chart-2: 173 58% 39%;
-    --chart-3: 197 37% 24%;
-    --chart-4: 43 74% 66%;
-    --chart-5: 27 87% 67%;
-  }
 }
